--- a/style.css
+++ b/style.css
@@ -3,4 +3,15 @@
 }
 .sub{
     background-color: #FCEAE8;
+    height: 300px;
+}
+.categoris img{
+    width: 100px;
+}
+.panda-btn-buy-now{
+    background-image: linear-gradient(to bottom, #FF589B 0%, #FF136F 100%);
+    color: #fff;
+    border: none;
+    border-radius: 8px;
+    padding: 9px 25px;
 }
